[tool.poetry]
name = "onlyacat233"
version = "0.1.0"
description = ""
authors = ["cyan <contact@cyans.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
watchdog = "^3.0.0"
rich = "^13.7.0"
more-itertools = "^10.2.0"
pydantic = "^1.10.0"
contextlocal = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
